--- a/rust-riscv-os/Makefile
+++ b/rust-riscv-os/Makefile
@@ -10,7 +10,7 @@ run: all
 .PHONY: clean
 clean: 
 	rm ./object_files/* -rf
-	rm ./rros.img
+	rm ./rros.img -r
 
 ASSEMBLY_FLAG = -O0 \
 								-c \
@@ -26,17 +26,22 @@ RUSTC_FLAGS = -C opt-level=0 \
 								-Z verbose \
 								--target=riscv64gc-unknown-linux-gnu \
 								--emit=obj \
-								-C panic=abort
+								-C panic=abort \
+								-C relocation-model=static 
 
-BOOT_ASM: boot.s
-	riscv64-linux-gnu-gcc boot.s -o ./object_files/boot.o $(ASSEMBLY_FLAG)
+LIB	=	/usr/riscv64-linux-gnu/lib
+LINKER_LIBRARY = $(LIB)/libpthread-2.32.so
+
+BOOT_ASM: asm.s
+	riscv64-linux-gnu-gcc asm.s -o ./object_files/asm.o $(ASSEMBLY_FLAG)
 
 RUST_OBJECT: main.rs
 	rustc main.rs -o ./object_files/main.o $(RUSTC_FLAGS)
 	
 
 RROS: BOOT_ASM RUST_OBJECT
-	riscv64-linux-gnu-ld ./object_files/* -o rros.img
+	riscv64-linux-gnu-ld ./object_files/* -o rros.img 
+
 
 
 
